--- a/index.css
+++ b/index.css
@@ -58,3 +58,25 @@ h5 {
   --muted: rgb(95, 91, 91);
   --mainFont: "Montserrat", sans-serif;
 }
+
+@media screen and (max-width: 550px) {
+  h1 {
+    font-size: 4rem;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+  }
+
+  h3 {
+    font-size: 2rem;
+  }
+
+  h4 {
+    font-size: 1.8rem;
+  }
+
+  h5 {
+    font-size: 1.2rem;
+  }
+}
