--- a/style.css
+++ b/style.css
@@ -310,7 +310,22 @@ a {
   inset: 0;
   width: 100%;
   height: 100%;
-  background: black;
+  display: none;
+}
+
+.downloadable-screenshot {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.user-img {
+  height: 100%;
+  width: 100%;
 }
 
 .download-btn {
@@ -323,6 +338,7 @@ a {
   cursor: pointer;
   color: white;
   font-size: 2rem;
+  transition: 0.5s ease;
 }
 
 .download-btn:hover {
@@ -351,6 +367,9 @@ a {
 }
 
 @media screen and (max-width: 725px) {
+  .camera-column {
+    padding: 1rem;
+  }
   .effects-camera-column,
   .main {
     flex-direction: column;
