--- a/style.css
+++ b/style.css
@@ -251,6 +251,10 @@ a {
   z-index: 50;
 }
 
+.disabled {
+  pointer-events: none;
+}
+
 .action-icon {
   font-size: 2.5rem;
   color: var(--white);
@@ -353,7 +357,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 3.5rem;
+  padding: 0 2rem;
 }
 
 .empty-screenshot-card {
